--- a/app/styles/scoreboard.css
+++ b/app/styles/scoreboard.css
@@ -1,8 +1,11 @@
 .scoreboard {
+    box-sizing: border-box;
     position: absolute;
 
-    top: 5%;
-    right: 5%;
+    top: 10px;
+    right: 20px;
+
+    padding: 10px;
 
     border: 1px solid #ccc;
     min-height: 100px;
@@ -11,4 +14,14 @@
     background-color: #333;
 
     color: white;
+}
+
+.scoreboard li {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+}
+
+.scoreboard li div {
+  margin: auto;
 }
